--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-video-js-player": "^1.1.1",
     "uuid": "^7.0.3"
   },
   "scripts": {
