--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@mui-treasury/styles": "^1.13.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "gapi-client": "0.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-elastic-carousel": "^0.9.5",
     "react-scripts": "3.4.1",
     "react-video-js-player": "^1.1.1",
+    "styled-components": "^5.2.1",
     "uuid": "^7.0.3"
   },
   "scripts": {
